# fastapi-keycloak

./: build.zig  pyproject.toml
fastapi_keycloak/: api.py  model.py
tests/: __init__.py  app.py  keycloak_postgres.yaml  realm-export.json  test_functional.py
tests/realm/: realm-export.json
