[tool.poetry]
name = "fastapi-keycloak"
version = "0.1.0"
description = ""
authors = [
  "Jonas Scholl <jonas@code-specialist.com>",
  "Yannic Schröer <yannic@code-specialist.com>",
  "Alex Barceló <alex@betarho.net>"
]

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.4.0"
asgiref = "^3.8.1"
certifi = "^2024.6.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
ecdsa = "^0.19.0"
fastapi = "^0.110.0"
h11 = "^0.14.0"
idna = "^3.7"
pyasn1 = "^0.6.0"
requests = "^2.32.3"
urllib3 = "^2.2.2"
pydantic = "^2.7.4"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
